@@ -24,6 +24,7 @@ def download_hentai(h_ID):
             title=str(gallery.xpath('//div[@id="info"]/h1/span[@class="pretty"]/text()')[0])    #title
         except IndexError:
             continue
+        
         title=title.replace("\\", "")   #remove forbidden characters for filenames
         title=title.replace("/", "")
         title=title.replace(":", "")
@@ -34,6 +35,9 @@ def download_hentai(h_ID):
         title=title.replace(">", "")
         title=title.replace("|", "")
         title=title[:140]               #limit title length to 140 characters
+        if os.path.isfile(f"./{h_ID} {title}.pdf")==True:   #PDF already exists, don't download and convert, skip
+            raise FileExistsError
+        
         os.makedirs(f"{h_ID}", exist_ok=True)   #create image folder ./h_ID/
 
 
