@@ -7,6 +7,7 @@
 #fixed index out of range errors
 +number of finished hentai / number of all hentais
 #limit title to 140 characters
++don't redownload and convert already existing hentai
 
 2021-11-16
 +timeouts
